# convergio-mesh

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-mesh/: Cargo.toml
crates/convergio-mesh/src/: auth.rs  capability_registry.rs  capability_routes.rs  capability_types.rs  convergence.rs  delegation.rs  error.rs  ext.rs  lib.rs  mcp_defs.rs  peers_parser.rs  peers_registry.rs  peers_types.rs  routes.rs  routes_cross_poll.rs  routes_role_config.rs  routes_sync_repo.rs  schema.rs  sync.rs  sync_apply.rs  sync_apply_tests.rs  sync_cursor.rs  sync_loop.rs  transport.rs  types.rs
crates/convergio-mesh/tests/: e2e_cursor_fix.rs  e2e_heartbeat_roles.rs  e2e_hmac_auth.rs  e2e_role_config.rs  e2e_sync_convergence.rs  mesh_helpers.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  ADR-023-mesh-multi-transport-auth.md
