[workspace]
resolver = "2"
members = ["crates/convergio-mesh"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "LicenseRef-Convergio-Community"
repository = "https://github.com/Roberdan/convergio-mesh"

[workspace.dependencies]
# SDK dependencies
convergio-types = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-db = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-security = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-telemetry = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9.3"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
hex = "0.4"
hostname = "0.4"

# Dev deps
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
