[package]
name = "convergio-mesh"
description = "Peer discovery, delta sync, delegation tracking"
version = "0.1.13"
edition.workspace = true
license.workspace = true
repository = "https://github.com/Roberdan/convergio-mesh"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
convergio-telemetry = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
